test/classes/bradc/overloadMethods/v5bothReturnTypes.good
v5bothReturnTypes.chpl:2: error: conflicting return type specified for ':C.bbox(x: int): range(int,bounded,1)'
v5bothReturnTypes.chpl:17: error:   overridden by ':D.bbox(x: int): range(int,bounded,0)'
